--- a/template.html
+++ b/template.html
@@ -1,13 +1,15 @@
 <!doctype html>
-<html>
+<html lang="en">
   <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>RSS Reader</title>
   </head>
   <body>
     <div class="container">
       <div class="jumbotron">
-        <h1 class="display-4">Hello, world!</h1>
-        <form>
+        <h1>Hello, world!</h1>
+        <form class="form-inline">
           <div class="form-group">
             <input type="text" required="" name="url" class="form-control" placeholder="rss link">
             <button type="submit" class="btn btn-primary ml-1">Add</button>
