--- a/template.html
+++ b/template.html
@@ -6,16 +6,19 @@
     <title>RSS Reader</title>
   </head>
   <body>
-    <div class="container">
+    <div class="container mt-5">
       <div class="jumbotron">
-        <h1>Hello, world!</h1>
-        <form class="form-inline">
+        <h1>RSS Reader</h1>
+        <div class="text-muted">http://lorem-rss.herokuapp.com/feed</div>
+        <p class="text-muted">https://www.sports.ru/rss/main.xml</p>
+        <form action class="form-inline">
           <div class="form-group">
             <input type="text" required="" name="url" class="form-control" placeholder="rss link">
             <button type="submit" class="btn btn-primary ml-1">Add</button>
           </div>
         </form>
       </div>
-    </div>>
+      <div class="col-6 rss-feed"></div>
+    </div>
   </body>
 </html>
