--- a/template.html
+++ b/template.html
@@ -13,8 +13,8 @@
             <div class="col-md-10 col-lg-8 mx-auto text-white">
               <h1 class="display-3">RSS Reader</h1>
               <p class="text-muted my-0">Examples:</p>
-              <p class="text-muted my-0">http://lorem-rss.herokuapp.com/feed?unit=second&interval=10</p>
-              <p class="text-muted mt-0 mb-2">http://lorem-rss.herokuapp.com/feed?unit=second&interval=30</p>
+              <p class="text-muted my-0">https://lorem-rss.herokuapp.com/feed?unit=second&interval=10</p>
+              <p class="text-muted mt-0 mb-2">https://lorem-rss.herokuapp.com/feed?unit=second&interval=30</p>
               <form action="" class="rss-form">
                 <div class="form-row">
                   <div class="col">
